JPEG XL: fix keying of frametimes

Based on WebP, which kinda behaves the same.

BUG: 455597
(cherry picked from commit aeaaa6df3dbb95185f0077baa5ce13d2f559c444)